2.1 update